[gd_scene load_steps=7 format=2]

[ext_resource path="res://start-assets/player.png" type="Texture" id=1]
[ext_resource path="res://HomingEnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40.5, 43 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 199.667
height = 82.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 43.5, 46.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 46.5, 48.5 )

[node name="HomingEnemy" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="HEnemySprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 1 )
scale = Vector2( 0.25, 0.25 )
shape = SubResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="PlayerZone" type="CollisionShape2D" parent="PlayerDetector"]
scale = Vector2( 2, 0.2 )
shape = SubResource( 2 )

[node name="PlayerHit" type="Area2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="Hitbox" type="CollisionShape2D" parent="PlayerHit"]
position = Vector2( 0.5, 0.5 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )

[node name="EnemyHit" type="Area2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="Hitbox2" type="CollisionShape2D" parent="EnemyHit"]
position = Vector2( 0.5, -0.5 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 4 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="area_entered" from="PlayerHit" to="." method="_on_PlayerHit_area_entered"]
[connection signal="body_entered" from="EnemyHit" to="." method="_on_EnemyHit_body_entered"]
